Verif/Test/Invalide/test_erreur_3.91-4.deca
// Description:
//    Programme soulevant l'erreur (3.91)
// Resultats:
//    Erreur contextuelle
//    Ligne 27 : Identificateur de champ attendu (règle 3.91)
//
// Attributs: exec correct automatique
//
// Historique:
//    cree le 20/01/2012


class A {
   int x() {
   }

}

class B extends A {
}

class C extends B {
   int y() 
   A a;
   int z;
   {
    z = a.x;
   }
}
